# jcard

./: .gitleaks.toml  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: design-rationale.md
hooks/: pre-commit
src/: deserialize.rs  error.rs  lib.rs  property.rs  serialize.rs
