[package]
name = "jcard"
version = "0.1.0"
edition = "2021"
authors = ["Jérôme Poulin <jeromepoulin@gmail.com>"]
description = "RFC 7095 jCard (JSON representation of vCard) types with serde support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ticpu/jcard"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
