[package]
name = "jcard"
version = "0.3.0"
edition = "2021"
authors = ["Jérôme Poulin <jeromepoulin@gmail.com>"]
description = "RFC 7095 jCard (JSON representation of vCard) types with serde support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ticpu/jcard"
documentation = "https://docs.rs/jcard"
keywords = ["jcard", "vcard", "rfc7095", "json", "serde"]
categories = ["encoding", "parser-implementations"]

[features]
lenient-deserialize = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
